Add jwt auth (#5)
Mistakenly thought the turnstile token could be used for repeated validation. Now we verify the token once and generate a JWT to use the api token
